remove horizontal scrollbar issue

--- a/src/venia/components/Navigation/navigation.css
+++ b/src/venia/components/Navigation/navigation.css
@@ -29,7 +29,7 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     left: 0;
-    /* max-width: 360px; */
+    max-width: 360px;
     overflow: hidden;
     position: fixed;
     top: 0;
